tests/should_fail/let_struct_on_list.nv
module fail
// Let destructure: struct on list value
struct Point { x: Int, y: Int }
let Point { x, y } = [1, 2]
